force-app/main/default/objects/CaseUpdate__c/CaseUpdate__c.object-meta.xml
<CustomObject>
    <label>Case Update</label>
    <nameField>
        <label>Case Update</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>