force-app/main/default/objects/CaseUpdate__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Updates</relationshipLabel>
    <relationshipName>Case_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>