force-app/main/default/objects/CaseUpdate__c/fields/UpdateType__c.field-meta.xml
<CustomField>
    <fullName>UpdateType__c</fullName>
    <label>Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>CustomerContacted</fullName>
                <label>Customer Contacted</label>
            </value>
            <value>
                <fullName>InternalInvestigation</fullName>
                <label>Internal Investigation</label>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>