force-app/main/default/objects/CaseUpdate__c/fields/VisibleToCustomer__c.field-meta.xml
<CustomField>
    <fullName>VisibleToCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible To Customer</label>
    <type>Checkbox</type>
</CustomField>